syntax = "proto3";

option go_package = "github.com/F1zm0n/blocker/proto";

service Node{
  rpc Handshake (Version) returns (Version);
  rpc HandleTransaction (Transaction) returns (Ack);
}

message Version{
  string version = 1;
  int32 height = 2;
  string listenAddr = 3;
  repeated string peerList = 4;
}

message Ack {}


message Block {
  Header header = 1;
  repeated Transaction transactions = 2;
  bytes publicKey = 3;
  bytes signature = 4;
}

message Header {
  int32 version = 1;
  int32 height = 2;
  bytes previous_hash = 3;
  bytes root_hash = 4; // merkle root of tx
  int64 timestamp = 5;
}

message TxInput{
  // The previous hash of the tx containing
  // the output we want to spend.
  bytes prev_tx_hash = 1;
  // The index of the previous tx we want
  // to spend
  uint32 prev_out_index = 2;
  bytes public_key = 3;
  bytes signature = 4;
}

message TxOutput {
  int64 amount = 1;
  bytes address = 2;
}

message Transaction {
  int32 version = 1;
  repeated TxInput inputs = 2;
  repeated TxOutput outputs = 3;
}
